Impl gameController and refactoring